AND-3294 - Fix for text not wrapping on placeholders and contributors (timestamp info). Keeps clear on inline images to prevent wrapping - the original reason for this bug coming about.

--- a/ArticleTemplates/assets/scss/base/_reset.scss
+++ b/ArticleTemplates/assets/scss/base/_reset.scss
@@ -52,7 +52,3 @@ a {
         color: color(tone-news-accent);
     }
 }
-
-p {
-    clear: both;
-}
