--- a/ArticleTemplates/assets/scss/modules/_figure.scss
+++ b/ArticleTemplates/assets/scss/modules/_figure.scss
@@ -33,3 +33,7 @@ figure {
         padding: base-px(.5, 1, 2, 1);
     }
 }
+
+figure.figure-inline + p {
+    clear: both;
+}
